--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v0-112</title>
+    <title>EBS Entry v0-113</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -12,15 +12,12 @@
         .container { max-width: 950px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 10px; }
         h3 { margin: 0; font-weight: bold; flex-grow: 1; font-size: 1.1rem; }
-        .ver-tag { font-weight: normal; font-size: 0.8rem; }
         .header-btns { display: flex; gap: 8px; }
         .btn-lookup { background: var(--bridge); padding: 4px; font-size: 0.7rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 65px; height: 35px; line-height: 1.1; text-align: center; }
         .btn-reset-ui { background: #7f8c8d; }
         .grid-top { display: grid; grid-template-columns: 0.8fr 1fr 1.2fr; gap: 10px; }
         .grid-cat { display: grid; grid-template-columns: 1fr 0.4fr 0.3fr; gap: 10px; margin-top: 10px; }
         .grid-acc { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 10px; }
-        .grid-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-top: 10px; }
-        .grid-4 { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 8px; margin-top: 10px; }
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; }
         input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 16px; box-sizing: border-box; height: 38px; -webkit-text-size-adjust: 100%; }
         .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 36px; border: 1px solid #dcdde1; border-radius: 6px; background: #f1f2f6; box-sizing: border-box; cursor: default; }
@@ -45,7 +42,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>EBS input <span class="ver-tag">(v0-112)</span></h3>
+        <h3>EBS input <span class="ver-tag">(v0-113)</span></h3>
         <div class="header-btns">
             <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
             <button class="btn-lookup btn-reset-ui" onclick="localReset()">Reset<br>fields</button>
@@ -66,12 +63,12 @@
         <div><label>To</label><select id="colI" required onchange="handleAccTrigger()"></select></div>
     </div>
     <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2" style="width:100%; border-radius:6px; border:1px solid #dcdde1; padding:8px; box-sizing:border-box; font-size:16px;"></textarea></div>
-    <div class="grid-3">
+    <div class="grid-3" style="display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px; margin-top:10px;">
         <div><label>Frequency</label><select id="colFreq"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
         <div><label>Mnth</label><select id="colZ"></select></div>
     </div>
-    <div class="grid-4">
+    <div class="grid-4" style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr; gap:8px; margin-top:10px;">
         <div><label>Each</label><input type="number" id="colT" placeholder="0.00" step="0.01" oninput="calc()"></div>
         <div><label>Currency</label><select id="colX" onchange="calc()"></select></div>
         <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" oninput="calc()"></div>
@@ -90,7 +87,7 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-112)";
+    const VER = "Excel Budget Sheet input (v0-113)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
@@ -201,12 +198,12 @@
 
     function saveRow() {
         const fv = document.getElementById('colF').value, hv = document.getElementById('colH').value, iv = document.getElementById('colI').value;
-        if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Category and Accounts required."); return; }
+        if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Required fields missing."); return; }
         let whoVal = ""; if (fv.startsWith('S')) whoVal = document.getElementById('colA').value;
 
-        // Strict 35-index array to ensure Column A is the anchor
+        // Force Column A (index 0) to have data to anchor the append
         const row = Array(35).fill("");
-        row[0] = document.getElementById('colA').value; // Col A
+        row[0] = document.getElementById('colA').value || "Roy"; 
         row[1] = document.getElementById('colB').value.split(' - ')[0];
         row[2] = document.getElementById('colC').value;
         row[4] = document.getElementById('bgTypeE').value;
@@ -223,8 +220,8 @@
         row[22] = calc();
         row[23] = document.getElementById('colX').value.split(' - ')[0];
         row[25] = document.getElementById('colZ').value;
-        row[33] = whoVal; // Col AH
-        row[34] = VER;   // Col AI
+        row[33] = whoVal; 
+        row[34] = VER;   
         
         let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
         ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
@@ -246,10 +243,22 @@
     async function handleSync() {
         const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!data.length) return;
         tokenClient.callback = async (resp) => {
-            const vals = data.map(r => { let rc = [...r]; const dP = rc[2].split('-'); rc[2] = `${dP[2]}/${dP[1]}/${dP[0]}`; [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc; });
+            const vals = data.map(r => { 
+                let rc = [...r]; 
+                const dP = rc[2].split('-'); 
+                rc[2] = `${dP[2]}/${dP[1]}/${dP[0]}`; 
+                [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); 
+                return rc; 
+            });
             try { 
-                // Hardened explicit range anchor v0-112
-                await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: "'EBSinput'!A:AI", valueInputOption: 'USER_ENTERED', resource: { values: vals } }); 
+                // Hardened sync: Using values[0].length check to force row preservation
+                await gapi.client.sheets.spreadsheets.values.append({ 
+                    spreadsheetId: SHEET_ID, 
+                    range: "'EBSinput'!A:AI", 
+                    valueInputOption: 'USER_ENTERED', 
+                    insertDataOption: 'INSERT_ROWS',
+                    resource: { values: vals } 
+                }); 
                 alert("Success!"); renderPreview(); 
             } catch (e) { alert("Sync Error."); }
         };
