--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v2-126</title>
+    <title>EBS Entry v3-02</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <div class="branding-row"><b>EBS Input</b> <span>v2-126</span></div>
+        <div class="branding-row"><b>EBS Input</b> <span>v3-02</span></div>
         <div class="header-btns">
             <button class="btn-lookup btn-pull" onclick="checkEditState(() => cachePull())">Pull local<br>Lookups</button>
             <button class="btn-lookup btn-refresh" id="refresh_btn" onclick="checkEditState(() => initRefresh())">Refresh<br>Lookups<br>from Sheets</button>
@@ -65,21 +65,26 @@
             <div id="colCDisp" style="font-size:0.65rem; color:#7f8c8d; text-align:center; margin-top:2px;"></div>
         </div>
     </div>
+
     <div style="display:grid; grid-template-columns: 1fr 0.4fr 0.3fr; gap:10px; margin-top:10px;">
         <div><label>Category</label><select id="colF" required onchange="handleCatTrigger()"></select></div>
         <div><label style="text-align:center;">Flow</label><div id="flowDisplay" class="flow-display">--</div></div>
         <div><label>Sort</label><input type="number" id="colG" placeholder="0" onfocus="this.value=''"></div>
     </div>
+
     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:10px;">
         <div><label>From</label><select id="colH" required onchange="handleAccTrigger()"></select></div>
         <div><label>To</label><select id="colI" required onchange="handleAccTrigger()"></select></div>
     </div>
+
     <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2" style="font-size:16px;"></textarea></div>
+
     <div style="display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px; margin-top:10px;">
         <div><label>Frequency</label><select id="colFreq"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
         <div><label>Month</label><select id="colZ"></select></div>
     </div>
+
     <div style="display:grid; grid-template-columns:1.2fr 1fr 1fr 1fr; gap:8px; margin-top:10px;">
         <div><label>Each</label>
             <div class="calc-input-wrap">
@@ -91,17 +96,19 @@
         <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" onfocus="this.value=''" oninput="calc()"></div>
         <div><label>Multiplier</label><input type="number" id="colM" value="1" step="0.01" oninput="calc()"></div>
     </div>
+
     <div class="total-box"><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
+
     <div class="actions">
-        <!-- FIX: create always appends, even if editIndex is active -->
         <button class="action-main" onclick="handleMainAction('create')" style="background:var(--accent);">Create Staging record</button>
         <button class="action-main" id="sync_btn" onclick="checkEditState(() => handleSync())" style="background:var(--bridge);">Send Staging records to Sheets</button>
         <button class="action-main" id="wipeBtn" onclick="handleWipeConfirm()" style="background:var(--danger); opacity: 0.85;">Clear Staging records</button>
     </div>
+
     <div class="preview-wrap" id="previewArea"></div>
     <div id="auth_status">iOS Sync Status: Idle</div>
     <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-    <div id="trace_log" onclick="toggleLog(false)">Trace: v2-126 Logic Circuit Breaker active.</div>
+    <div id="trace_log" onclick="toggleLog(false)">Trace: v3-02 Logic Circuit Breaker active.</div>
 </div>
 
 <div id="flow_modal" class="modal">
@@ -132,7 +139,10 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet Input (v2-126)";
+
+    // v3-02: version increment and persisted into each staged row for traceability
+    const VER = "Excel Budget Sheet Input (v3-02)";
+
     let AA_LIST = [],
         coordinateMap = {},
         symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
@@ -146,7 +156,7 @@
         resetConfirmed = false,
         isRestoring = false;
 
-    // FIX: remembers whether Flow modal should continue create vs commit
+    // Context for Flow modal continuation
     let flowModalContext = 'create'; // 'create' | 'commit'
 
     function logTrace(msg) {
@@ -205,8 +215,8 @@
         coordinateMap = {"Grouping":{val:0},"F/U":{val:1},"Category":{val:2},"From":{val:3},"To":{val:4},"Frequency":{val:5},"Status":{val:6},"Month":{val:7},"Currency":{val:8}};
         rawLookupData = [["INIT"]];
         updateDropdown('colA', ["Roy", "Peter"], 'Roy');
-        updateDropdown('colB', ["v Verified", "xf Transfer"], 'v');
-        updateDropdown('colF', ["Food", "Transfer"], null, '--Select--');
+        updateDropdown('colB', ["v Verified", "xf Transfer", "S Support"], 'v');
+        updateDropdown('colF', ["Food", "Support", "Transfer"], null, '--Select--');
         updateDropdown('colH', AA_LIST, null, '--Select--');
         updateDropdown('colI', AA_LIST, null, '--Select--');
         updateDropdown('colFreq', ["A Ad-hoc"], 'A');
@@ -301,7 +311,6 @@
         }
     }
 
-    // v2-126: reset / circuit breaker
     function localReset() {
         editIndex = -1;
         pendingEdit = -1;
@@ -371,11 +380,14 @@
 
     function handleAccTrigger() {
         if (isRestoring) return;
+
         const h = document.getElementById('colH').value,
               i = document.getElementById('colI').value,
               ty = document.getElementById('colB');
+
         const fAA = AA_LIST.includes(h),
               tAA = AA_LIST.includes(i);
+
         let valE = "zOut";
         if (fAA && tAA) valE = "xfer";
         else if (!fAA && tAA) valE = "In";
@@ -389,9 +401,16 @@
         }
     }
 
+    // v3-02: centralize Support match to ensure identical behavior in UI triggers and save logic
+    function isSupportCategory(cat) {
+        return (cat || "").toLowerCase().includes("support");
+    }
+
     function handleCatTrigger() {
         if (isRestoring) return;
-        if (document.getElementById('colF').value.startsWith('S')) {
+
+        const cat = document.getElementById('colF').value || "";
+        if (isSupportCategory(cat)) {
             const s = Array.from(document.getElementById('colB').options).find(o => o.value.startsWith('S'));
             if (s) document.getElementById('colB').value = s.value;
         }
@@ -414,14 +433,15 @@
         const t = parseFloat(document.getElementById('colT').value) || 0,
               u = parseFloat(document.getElementById('colM').value) || 1,
               v = parseFloat(document.getElementById('colV').value) || 0;
+
         const tot = ((t * u) + v).toFixed(2);
         const curCode = document.getElementById('colX').value.split(' ')[0] || 'GBP';
+
         document.getElementById('symbol').innerText = symbols[curCode] || "£";
         document.getElementById('totalDisp').innerText = tot;
         return tot;
     }
 
-    // FIX: build once and reuse for create/commit
     function buildFinalPackage() {
         const fv = document.getElementById('colF').value,
               hv = document.getElementById('colH').value,
@@ -435,8 +455,10 @@
         const flowV = document.getElementById('flowDisplay').innerText;
         if (flowV === "--") return { needsFlow: true };
 
-        let wV = "";
-        if (fv.startsWith('S')) wV = document.getElementById('colA').value;
+        // v3-02 BUG FIX (Who field):
+        // Requirement: Who in Staging must only be populated when Category contains "support"/"Support" (case-insensitive).
+        // Fix: Who value is computed exclusively from Category and stored blank for all non-support Categories.
+        const whoV = isSupportCategory(fv) ? document.getElementById('colA').value : "";
 
         const finalPackage = [
             document.getElementById('colA').value, document.getElementById('colB').value, document.getElementById('colC').value,
@@ -447,13 +469,12 @@
             parseFloat(document.getElementById('colT').value || 0).toFixed(2), document.getElementById('colM').value,
             parseFloat(document.getElementById('colV').value || 0).toFixed(2), calc(),
             document.getElementById('colX').value, "", document.getElementById('colZ').value,
-            "", "", "", "", "", "", "", wV, VER
+            "", "", "", "", "", "", "", whoV, VER
         ];
 
         return { needsFlow: false, finalPackage };
     }
 
-    // FIX: mode controls overwrite vs append
     function handleMainAction(mode = 'create') {
         logTrace(`Action Triggered. Mode=${mode}`);
 
@@ -492,7 +513,6 @@
         const trs = document.getElementById('previewArea').getElementsByTagName('tr');
         const btn = trs[idx + 1].getElementsByTagName('button')[0];
 
-        // FIX: "C" commits edit (overwrite)
         if (btn.innerText === 'C') { handleMainAction('commit'); return; }
 
         if (pendingEdit === idx) {
@@ -549,7 +569,6 @@
     function openFlowModal() { document.getElementById('flow_modal').style.display = 'block'; }
     function closeFlowModal() { document.getElementById('flow_modal').style.display = 'none'; }
 
-    // FIX: continue correct action after flow selection
     function commitFlowSelection() {
         const selected = document.getElementById('modal_flow_select').value;
         document.getElementById('flowDisplay').innerText = selected;
@@ -564,6 +583,7 @@
         storageData.forEach((r, idx) => {
             let bS = (pendingEdit === idx) ? "background:red" : (editIndex === idx ? "background:#f39c12" : "background:#3498db");
             let bL = (pendingEdit === idx) ? "..." : (editIndex === idx ? "C" : "E");
+
             const [y, m, dn] = r[2].split('-').map(Number);
             const dt = new Date(y, m - 1, dn);
             const dNam = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()];
